objects/IS_System_Modification__c.object
<CustomObject>
    <description>Represents a change that has/will occur in the system on an IS System Component</description>
    <fields>
        <fullName>API_Name_Label__c</fullName>
        <label>z1API Name/Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Name__c</fullName>
        <description>Created for CR-5406.</description>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Version__c</fullName>
        <label>z1API Version</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attributes__c</fullName>
        <formula>IF( SOX_Object__c == true,SOX_Flag__c + &apos; &apos;,&apos;&apos;)+
IF(Integration_Flag__c != &apos;&apos;,Integration_Flag__c + &apos; &apos;,&apos;&apos;) +
IF(Managed_Package_Flag__c != &apos;&apos;,Managed_Package_Flag__c + &apos; &apos;,&apos;&apos;) +
IF(High_Impact_Flag__c != &apos;&apos;,High_Impact_Flag__c + &apos; &apos;,&apos;&apos;) +
IF(Double_Deployment_Flag__c != &apos;&apos;,Double_Deployment_Flag__c + &apos; &apos;,&apos;&apos;) +
IF(Duplicate_Mod_on_CR_Flag__c != &apos;&apos;,Duplicate_Mod_on_CR_Flag__c + &apos; &apos;,&apos;&apos;) +
IF(Duplicate_Mod_on_Release_Flag__c != &apos;&apos;,Duplicate_Mod_on_Release_Flag__c + &apos; &apos;,&apos;&apos;)</formula>
        <label>Attributes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMS__c</fullName>
        <label>z1CMS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR_Status__c</fullName>
        <formula>TEXT(Change_Request__r.Status__c )</formula>
        <label>CR Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Request_Link__c</fullName>
        <description>Used in related lists and areas where the master-detail field may not display properly.  CR-20160318-9705</description>
        <formula>HYPERLINK(&apos;/&apos; + Change_Request__c,Change_Request__r.Name)</formula>
        <inlineHelpText>Link to the parent change request</inlineHelpText>
        <label>Change Request Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Request__c</fullName>
        <label>Change Request</label>
        <referenceTo>SFDC_Change_Request__c</referenceTo>
        <relationshipLabel>IS System Modifications</relationshipLabel>
        <relationshipName>SFDC_Modifications6</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Change_Value__c</fullName>
        <description>updated by workflow (so the Rollup-Summary can have an actual value)</description>
        <label>Change Value</label>
        <precision>12</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>z1Code Type</label>
        <picklist>
            <picklistValues>
                <fullName>Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Setting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VF Page/Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <picklist>
            <picklistValues>
                <fullName>Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytic Snapshot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buttons/Links</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permission Sets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role Hierarchy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teams/Roles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer Record Owner or Teams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow - Email Alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow - Field Update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Config_File_Path__c</fullName>
        <label>Config File Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Object__c</fullName>
        <inlineHelpText>Enter the name of the new or changed custom object.</inlineHelpText>
        <label>Custom Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <formula>TEXT( IS_System_Component__r.Data_Type__c )</formula>
        <label>Data Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Database_Name__c</fullName>
        <label>z1Database Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delete_from_Design__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Instead of deleting the IS Mod, use this field to indicate it has been removed.  Also used to exclude from builds and deployment reports.</inlineHelpText>
        <label>Delete from Design?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dependency_Notes__c</fullName>
        <inlineHelpText>Describe any prerequisite or dependent Mods and/or include a link to them in the appropriate related list</inlineHelpText>
        <label>Dependency Notes</label>
        <length>16384</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Deployed_To__c</fullName>
        <inlineHelpText>Where has this been deployed?</inlineHelpText>
        <label>Deployed To</label>
        <picklist>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rehearse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Deployment_Date_Actual__c</fullName>
        <inlineHelpText>Date this modification was fully deployed to Production.  Defaults to Release Deployment Date.</inlineHelpText>
        <label>Deployment Date (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployment_Date_Release__c</fullName>
        <formula>Change_Request__r.Release__r.Target_Release_Date__c</formula>
        <inlineHelpText>Target Release Date from Release record</inlineHelpText>
        <label>Deployment Date (Release)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployment_Path__c</fullName>
        <formula>IF(NOT(ISBLANK(Change_Request__r.Release__r.Alternate_Sandbox__c)),
  &apos;Alt: &apos; &amp; Change_Request__r.Release__r.Alternate_Sandbox__r.Sandbox_Name__c &amp; 
  &apos; ➡ &apos;,
  &apos;&apos;) &amp; 
IF(NOT(ISBLANK(Change_Request__r.Release__r.Dev_Sandbox__c)),
  IMAGE(&apos;/img/msg_icons/confirm16.png&apos;,&apos;Complete&apos;),
  IMAGE(&apos;/img/msg_icons/warning16.gif&apos;,&apos;Not Defined&apos;) &amp; &apos;dev&apos;) &amp; 
  Change_Request__r.Release__r.Dev_Sandbox__r.Sandbox_Name__c &amp; 
  &apos; ➡ &apos; &amp;
IF(NOT(ISBLANK(Change_Request__r.Release__r.QA_Sandbox__c)),
  IF(INCLUDES(Deployed_To__c,&apos;QA&apos;),
    IMAGE(&apos;/img/msg_icons/confirm16.png&apos;,&apos;Complete&apos;),
    IMAGE(&apos;/img/search_dismiss.gif&apos;,&apos;Incomplete&apos;))
  &amp; Change_Request__r.Release__r.QA_Sandbox__r.Sandbox_Name__c 
  &amp; &apos; ➡ &apos;,
  &apos;&apos;) &amp; 
IF(NOT(ISBLANK(Change_Request__r.Release__r.UAT_Sandbox__c)),
  IF(INCLUDES(Deployed_To__c,&apos;UAT&apos;),
    IMAGE(&apos;/img/msg_icons/confirm16.png&apos;,&apos;Complete&apos;),
    IMAGE(&apos;/img/search_dismiss.gif&apos;,&apos;Incomplete&apos;)),
    IMAGE(&apos;/img/msg_icons/warning16.gif&apos;,&apos;Not Defined&apos;) &amp; &apos;uat&apos;)
  &amp; Change_Request__r.Release__r.UAT_Sandbox__r.Sandbox_Name__c
  &amp; &apos; ➡ &apos; &amp;
IF(NOT(ISBLANK(Change_Request__r.Release__r.Rehearse_Sandbox__c)),
  IF(INCLUDES(Deployed_To__c,&apos;Rehearse&apos;),
    IMAGE(&apos;/img/msg_icons/confirm16.png&apos;,&apos;Complete&apos;),
    IMAGE(&apos;/img/search_dismiss.gif&apos;,&apos;Incomplete&apos;)),
    IMAGE(&apos;/img/msg_icons/warning16.gif&apos;,&apos;Not Defined&apos;) &amp; &apos;rehearse&apos;)
  &amp; Change_Request__r.Release__r.Rehearse_Sandbox__r.Sandbox_Name__c
  &amp; &apos; ➡ &apos; &amp; 
  IF(INCLUDES(Deployed_To__c,&apos;Production&apos;),
  IMAGE(&apos;/img/msg_icons/confirm16.png&apos;,&apos;Complete&apos;),
  IMAGE(&apos;/img/search_dismiss.gif&apos;,&apos;Incomplete&apos;))
  &amp; &apos;Production&apos;</formula>
        <label>Deployment Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Planning_Notes__c</fullName>
        <inlineHelpText>(Env Manager) List the steps required for deployment of this change, including notes on double-deployment, integrations, etc</inlineHelpText>
        <label>Deployment Planning Notes</label>
        <length>16384</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Deployment_Status__c</fullName>
        <formula>IF(
Delete_from_Design__c = True, &quot;Deleted&quot;,
IF(Change_Value__c &gt; 0 &amp;&amp; Change_Value__c &lt; 0.1, &quot;Development&quot;,
IF(Change_Value__c &gt;= 0.1 &amp;&amp; Change_Value__c &lt; 1, &quot;Testing&quot;,
IF(Change_Value__c &gt;= 1 , &quot;Deployed&quot;,
&quot; &quot;))))</formula>
        <inlineHelpText>Based on Deployed To and Change Value fields</inlineHelpText>
        <label>Deployment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description of Change</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description_of_Change__c</fullName>
        <inlineHelpText>Describe what is being changed</inlineHelpText>
        <label>zzzDescription of Change</label>
        <length>16384</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Double_Deployment_Flag__c</fullName>
        <formula>IF(Double_Deployment__c,IMAGE(&quot;/resource/AttributeIcons/arrow_refresh16.png&quot;,&quot;Double-Deployment&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Double-Deployment Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Double_Deployment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this change require a double deployment (ex. API name change)</inlineHelpText>
        <label>Double-Deployment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Mod_on_CR_Flag__c</fullName>
        <formula>IF(Duplicate_Mod_on_CR__c,IMAGE(&quot;/resource/AttributeIcons/pictures16.png&quot;,&quot;Duplicate Mod on CR&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate Mod on CR Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Mod_on_CR__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Updated by code to indicate if the same related IS Component has another IS Mod record for the same CR</inlineHelpText>
        <label>Duplicate Mod on CR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Mod_on_Release_Flag__c</fullName>
        <formula>IF(Duplicate_Mod_on_Release__c,IMAGE(&quot;/resource/AttributeIcons/photos16.png&quot;,&quot;Duplicate Mod on Release&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate Mod on Release Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Mod_on_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Updated by code to indicate if the same related IS Component has another IS Mod record for the same Release</inlineHelpText>
        <label>Duplicate Mod on Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>File_Path_Server__c</fullName>
        <label>z1File Path/Server</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Data_Modification__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contains a step that involves a change to data</inlineHelpText>
        <label>Has Data Modification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Manual_Step_s__c</fullName>
        <formula>OR(
Has_Data_Modification__c = TRUE,
Has_Pre_Validation_Steps__c = TRUE,
Has_Pre_Deployment_Steps__c = TRUE,
Has_Post_Deployment_Steps__c = TRUE,
Has_Other_Deployment_Steps__c = TRUE
)</formula>
        <inlineHelpText>Contains at least one type of manual step for deployment</inlineHelpText>
        <label>Has Manual Step(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Other_Deployment_Steps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated by Code</description>
        <inlineHelpText>Contains a manual main deployment step</inlineHelpText>
        <label>Has Other Deployment Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Post_Deployment_Steps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated by Code</description>
        <inlineHelpText>Contains a step that must be performed after the Change Set is deployed</inlineHelpText>
        <label>Has Post-Deployment Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Pre_Deployment_Steps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated by Code</description>
        <inlineHelpText>Contains a step that must be performed before the Change Set is deployed</inlineHelpText>
        <label>Has Pre-Deployment Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Pre_Validation_Steps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated by Code</description>
        <inlineHelpText>Contains a step that must be performed before the Change Set is validated</inlineHelpText>
        <label>Has Pre-Validation Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Impact_Flag__c</fullName>
        <formula>IF(High_Impact_Mod__c,IMAGE(&quot;/resource/AttributeIcons/boxing-gloves-icon16.png&quot;,&quot;High Impact&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>High Impact Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Impact_Mod_Deployment__c</fullName>
        <inlineHelpText>Describe the impact of this change.  If there is a Pre-Validation step, what is the impact to the end user?</inlineHelpText>
        <label>High Impact Mod Deployment</label>
        <length>8192</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>High_Impact_Mod_Type__c</fullName>
        <inlineHelpText>Enter details below in the High-Impact Mod Deployment field</inlineHelpText>
        <label>High Impact Mod Type</label>
        <picklist>
            <picklistValues>
                <fullName>Field Type Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deletion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API Name Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Length Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>High_Impact_Mod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for CR-5406</description>
        <inlineHelpText>Examples - Field Type Change, Deletion, New Object, API Name change, Field Length Change</inlineHelpText>
        <label>High Impact Mod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IS_System_Component__c</fullName>
        <label>IS System Component</label>
        <referenceTo>IS_System_Component__c</referenceTo>
        <relationshipLabel>IS System Modifications</relationshipLabel>
        <relationshipName>IS_System_Modifications7</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Include_in_Change_Set__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Is this object to be included in a change set?</inlineHelpText>
        <label>Include in Change Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Flag__c</fullName>
        <formula>IS_System_Component__r.Integration_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on Integration Use field on related Component</inlineHelpText>
        <label>Integration Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Use__c</fullName>
        <formula>IS_System_Component__r.Integration_Use__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integration Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>Created for CR-5406.</description>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managed_Package_Flag__c</fullName>
        <formula>IS_System_Component__r.Managed_Package_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Managed Package Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managed_Package_Related__c</fullName>
        <formula>IS_System_Component__r.Managed_Package_Related__c</formula>
        <label>Managed Package Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Setup_Complete_in_Alternate_SB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Setup Complete in Alternate SB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Setup_Complete_in_Production__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Setup Complete in Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Setup_Complete_in_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Setup Complete in Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates a modification that cannot, or should not, be moved over automatically.  Instead, it will be done manually, after the auto-deployment.</inlineHelpText>
        <label>z1Manual Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mod_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who made the initial modification?</description>
        <label>Mod Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IS_System_Modifications5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Field_Length__c</fullName>
        <label>New Field Length</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Field_Type__c</fullName>
        <label>New Field Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Object_API_Name__c</fullName>
        <label>New Object API Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Object_Label__c</fullName>
        <label>New Object Label</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_In_Change_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this Modification cannot or should not be included in the Change Set, for any reason, please check this box during record creation. Field used to filter out Modifications during the Change Set creation process.</inlineHelpText>
        <label>z1Not In Change Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_Comments__c</fullName>
        <label>Notes/Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <formula>IF(NOT(ISBLANK(API_Name__c)),API_Name__c,IF(NOT(ISBLANK(API_Name_Label__c)),API_Name_Label__c,IS_System_Component__r.Item_API_Name__c))</formula>
        <label>Object API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Label__c</fullName>
        <formula>IF(NOT(ISBLANK(Label__c)),Label__c,IF(NOT(ISBLANK(API_Name_Label__c)),API_Name_Label__c,IS_System_Component__r.Object_Label__c))</formula>
        <label>Object Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <formula>TEXT(IS_System_Component__r.Object_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>z1Object</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts (Institutions)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppExchange Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ideas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads (Contacts to Vet)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlook Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports &amp; Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Created for CR-5406</description>
        <inlineHelpText>Rank order of modification to be completed for this particular CR.

Renamed from &apos;Dependency Rank&apos;</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Mod_Type__c</fullName>
        <description>Set by workflow when the Mod is changed to the Deployed record type</description>
        <inlineHelpText>Original record type before being updated to Deployed</inlineHelpText>
        <label>Original Mod Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Configuration__c</fullName>
        <inlineHelpText>Configuration changes that don’t necessarily affect the config file or aren’t directly editable in the CMS. e.g. IIS Change, in sitecore page template change.</inlineHelpText>
        <label>Other Configuration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Manual_Steps_Estimate_Mins__c</fullName>
        <label>Other Manual Steps Estimate (Mins)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Object__c</fullName>
        <formula>IF(AND(ISPICKVAL(Object__c,&apos;Custom Object&apos;),NOT(ISBLANK(Custom_Object__c))),
  Custom_Object__c,
  IF(NOT(ISBLANK(TEXT(Object__c))),
    TEXT(Object__c),
    IS_System_Component__r.Parent_Label__c))</formula>
        <label>Parent Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Deployment_Estimate_Mins__c</fullName>
        <inlineHelpText>Amount of time (in minutes) required to accomplish these steps</inlineHelpText>
        <label>Post-Deployment Estimate (Mins)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_deployment_step__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for CR-5406</description>
        <label>Post-deployment step?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Deployment_Estimate_Mins__c</fullName>
        <inlineHelpText>Amount of time (in minutes) required to accomplish these steps</inlineHelpText>
        <label>Pre-Deployment Estimate (Mins)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Validation_Estimate_Mins__c</fullName>
        <inlineHelpText>Amount of time (in minutes) required to accomplish these steps</inlineHelpText>
        <label>Pre-Validation Estimate (Mins)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_deployment_step__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for CR-5406</description>
        <label>Pre-deployment step?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Deleting__c</fullName>
        <label>Reason for Deleting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <formula>Change_Request__r.Release__r.Name</formula>
        <label>Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removed_from_Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Instead of deleting the IS Mod, use this field to indicate removal.  Exclude from build and deployment reports</inlineHelpText>
        <label>Removed from Solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOX_Flag__c</fullName>
        <formula>IS_System_Component__r.SOX_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOX Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOX_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Updated via trigger from the IS System Component field</inlineHelpText>
        <label>SOX Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSIS_DTS_Package_name__c</fullName>
        <label>SSIS/DTS Package Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security__c</fullName>
        <inlineHelpText>Which profiles was this component added to?</inlineHelpText>
        <label>z1Security</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>See_Dependencies__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To be used when there is manual steps must be completed in a specific order, or for other specific tasks. Dependencies can be listed in the existing Description or Notes/Comments section</inlineHelpText>
        <label>See Dependencies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>z1Server Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this modification directly impacts a Standard field, tab or object.</inlineHelpText>
        <label>z1Standard?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stored_Procedure_Name__c</fullName>
        <label>Stored Procedure Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_View_Name__c</fullName>
        <label>Table/View Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Manual_Steps_Estimate_Mins__c</fullName>
        <formula>Pre_Validation_Estimate_Mins__c +
Pre_Deployment_Estimate_Mins__c +
Post_Deployment_Estimate_Mins__c +
Other_Manual_Steps_Estimate_Mins__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total amount of time (in minutes) required to accomplish this Mod</inlineHelpText>
        <label>Total Manual Steps Estimate (Mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>